# betting

./: Cargo.toml  README.md  TODO.md  deploy.bash
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
data/: about.tera  base.tera  changelog.tera  create.sql  dashboard.tera  leaderboard.tera  login.tera
src/: aws.rs  axum_lambda_util.rs  dynamodb.rs  jwt.rs  leaderboard.rs  log_util.rs  login.rs  main.rs  model.rs  secrets.rs  secretsmanager.rs  sql_util.rs  user_id_cookie.rs
